comeccei a escrever conteudo

--- a/index.html
+++ b/index.html
@@ -8,15 +8,15 @@
 <body>
     <main>
         <header>
-            <h1>Titulo do site</h1>
+            <h1>Cursos gratis</h1>
         </header>
         <article>
-            <h2>Artigo 001</h2>
-            <p>Titulo artigo 001</p>
+            <h2>Curso de html 5 com CSS</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Expedita aspernatur quasi dolor nulla, nobis velit, qui ea eaque, quidem maxime ipsum similique. Velit neque corrupti at non, magnam a culpa.</p>
         </article>
         <article>
-            <h2>Artigo 002</h2>
-            <p>titulo artigo 002</p>
+            <h2>Curso de javscript</h2>
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Voluptatum praesentium incidunt distinctio iste possimus fuga molestias dolorum laboriosam eligendi soluta accusamus ducimus iure, aperiam porro temporibus, hic eaque eveniet tempora.</p>
         </article>
     </main>
     
